# nucleo-kernel

./: .gitignore  Cargo.toml  PROJECT_STRUCTURE.md  build_log.txt  nucleo.toml
docs/: agent_development.md  architecture.md  changelog.md  deployment.md  installation.md  kernel.md  syscalls.md
hal/: Cargo.toml
hal/src/: lib.rs  traits.rs
hal/src/arch/: linux.rs
hal/src/platform/: generic.rs
hal/tests/: integration.rs
kernel/: Cargo.toml
kernel/configs/: nucleo.toml
kernel/src/: architecture.rs  config.rs  daemon.rs  governor.rs  hal_impl.rs  hot_patch.rs  lib.rs  main.rs  metrics.rs  wal.rs
kernel/src/compiler/: mod.rs  unikernel.rs
kernel/src/distributed/: cluster.rs  discovery.rs  mod.rs  replication.rs
kernel/src/governance/: inspector.rs
kernel/src/modules/: timer.rs
kernel/src/persistence/: checkpoint.rs
kernel/src/security/: blocklist.rs  ebpf.rs
kernel/src/syscalls/: advanced.rs  basic.rs  mod.rs
kernel/tests/: integration.rs
kernel_data/: nucleo.checkpoint  nucleo.wal
kernel_data/checkpoints/agent_1/checkpoint_1782143860/: checkpoint.json
modules/: my_module.wat  v1.wasm  v1.wat  v2.wasm  v2.wat
nucleo-cli/: Cargo.toml
nucleo-cli/src/: main.rs
substrate/: Cargo.toml
substrate/src/: branch.rs  eval.rs  ipc.rs  lego.rs  lib.rs  memory_store.rs  mmu.rs  process.rs  untrusted.rs  wasm_runtime.rs  workspace.rs
substrate/src/scheduler/: semantic.rs
substrate/src/security/: capability.rs
substrate/tests/: eval_tests.rs  memory_store_tests.rs  workspace_tests.rs
