[workspace]
members = [
    "kernel",
    "substrate",
    "hal", "nucleo-cli",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Nucleo Team <nucleo@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
parking_lot = "0.12"
crossbeam-channel = "0.5"
crc32fast = "1.4"
signal-hook = "0.3"
once_cell = "1.19"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.8"
wasmtime = "14.0"
bincode = "1.3"
chrono = "0.4"
sha2 = "0.10"
nix = { version = "0.28", features = ["signal", "process"] }
walkdir = "2.4"
wait-timeout = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
