[package]
name = "nucleo-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
substrate = { path = "../substrate" }
hal = { path = "../hal" }
serde = { workspace = true }
serde_json = { workspace = true }
wasmtime = { workspace = true }
toml = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
crc32fast = { workspace = true }
signal-hook = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
