[package]
name = "nucleo-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
nucleo-kernel = { path = "../kernel" }
substrate = { path = "../substrate" }
hal = { path = "../hal" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }