[package]
name = "substrate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
wait-timeout = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
once_cell = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
